<resources>
    <string name="app_name">LaurenaAndroidERestaurant</string>
    <string name="entrres">Entrées</string>
    <string name="plats">Plats</string>
    <string name="desserts">Desserts</string>
    <string-array name="dishes">
        <item>Salade César</item>
        <item>Salade tout court</item>
        <item>Salade verte</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ble_scan_play">Lancer le scan BLE</string>
    <string name="ble_scan_stop">Scan BLE en cours...</string>
    <string name="ble_scan_error">Pas de bluetooth disponible</string>
    <string name="AdressMac">0000000000</string>
    <string name="distanceBLE">TextView</string>
    <string name="deviceName">Device Unknow</string>
    <string name="ble_device_disconnected">Statut: déconnecté</string>
    <string name="ble_device_connected">Statut: connecté</string>
    <string name="ble_device_characterictic">Button</string>
    <string name="ble_device_write">Lecture</string>
    <string name="platPrice" />
    <string name="itemName" />
    <string name="none" />
    <string name="buttonDesserts">Dessert</string>
    <string name="buttonPlats">Plats</string>
    <string name="buttonEntrees">Entrees</string>


</resources>